# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Executable target wrapping the gapic-generator-ads as as a 'ruby binary' (actually shellscript)
for use as a protoc plugin.
Targets wrapping the ruby runtime and the bundle install in their respective contexts for use in the
gapic-generator target.
"""
load("@gapic_generator_ruby//rules_ruby_gapic/ruby:ruby_context.bzl", "ruby_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby:bundled_install_context.bzl", "bundled_install_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby_binary:ruby_bundler_binary.bzl", "ruby_bundler_binary")

##
# Creates a bazel-runnable shellscript wrapping gapic-generator-ads
# ready to be uses as a protoc plugin
#
ruby_bundler_binary (
  name = "gapic_generator_ads_bundler",
  entrypoint = "@gapic_generator_ruby//:gapic-generator-ads/bin/protoc-gen-bazel_ruby_ads",
  srcs = ["@gapic_generator_ruby//:gapic_generator_allfiles"],
  src_base = "@gapic_generator_ruby//:gapic-generator-ads",
  ruby_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator-ads:gapic_generator_ads_ruby_context",
  bundled_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator-ads:gapic_generator_ads_bundled_context",
  visibility = ["//visibility:public"],
)

##
# Wraps gapic-generator-ads's ruby runtime into a context 
# to pass into the gapic-generator target
#
ruby_context(
  name = "gapic_generator_ads_ruby_context",
  visibility = ["//visibility:public"],
  ruby_bin = "@gapic_generator_ads_ruby_runtime//:bin/ruby",
  all_bins = "@gapic_generator_ads_ruby_runtime//:ruby_bins_allfiles",
  ruby_libfiles = "@gapic_generator_ads_ruby_runtime//:ruby_libs_allfiles",
  ruby_libroots = "@gapic_generator_ads_ruby_runtime//:ruby_libroots",
)

##
# Wraps gapic-generator-ads's bundled installation runtime into a context
# to pass into the gapic-generator target
#
bundled_install_context(
  name = "gapic_generator_ads_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_gapic_generator_ads//:export/gapic-generator-ads/Gemfile",
  all_bundled_files = "@bundler_gapic_generator_ads//:bundler_installed_gems",
)
