load("@gapic_generator_ruby//rules_ruby_gapic/ruby:ruby_context.bzl", "ruby_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby:bundled_install_context.bzl", "bundled_install_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby_binary:ruby_bundler_binary.bzl", "ruby_bundler_binary")

ruby_context(
  name = "gapic_generator_cloud_ruby_context",
  visibility = ["//visibility:public"],
  ruby_bin = "@gapic_generator_cloud_ruby_runtime//:bin/ruby",
  all_bins = "@gapic_generator_cloud_ruby_runtime//:ruby_bins_allfiles",
  ruby_libfiles = "@gapic_generator_cloud_ruby_runtime//:ruby_libs_allfiles",
  ruby_libroots = "@gapic_generator_cloud_ruby_runtime//:ruby_libroots",
)

bundled_install_context(
  name = "gapic_generator_cloud_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_gapic_generator_cloud//:export/gapic-generator-cloud/Gemfile",
  all_bundled_files = "@bundler_gapic_generator_cloud//:bundler_installed_gems",
)

##
# Creates a bazel-runnable shellscript wrapping gapic-generator-ruby cloud
# ready to be uses as a protoc plugin
#
ruby_bundler_binary (
  name = "gapic_generator_cloud_bundler",
  entrypoint = "@gapic_generator_ruby//:gapic-generator-cloud/bin/protoc-gen-bazel_ruby_cloud",
  srcs = ["@gapic_generator_ruby//:gapic_generator_allfiles"],
  src_base = "@gapic_generator_ruby//:gapic-generator-cloud",
  ruby_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator-cloud:gapic_generator_cloud_ruby_context",
  bundled_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator-cloud:gapic_generator_cloud_bundled_context",
  visibility = ["//visibility:public"],
)
