load("@gapic_generator_ruby//rules_ruby_gapic/ruby:ruby_context.bzl", "ruby_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby:bundled_install_context.bzl", "bundled_install_context")
load("@gapic_generator_ruby//rules_ruby_gapic/ruby_binary:ruby_bundler_binary.bzl", "ruby_bundler_binary")

ruby_context(
  name = "gapic_generator_ruby_context",
  visibility = ["//visibility:public"],
  ruby_bin = "@gapic_generator_ruby_runtime//:bin/ruby",
  all_bins = "@gapic_generator_ruby_runtime//:ruby_bins_allfiles",
  ruby_libfiles = "@gapic_generator_ruby_runtime//:ruby_libs_allfiles",
  ruby_libroots = "@gapic_generator_ruby_runtime//:ruby_libroots",
)

bundled_install_context(
  name = "gapic_generator_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_gapic_generator//:export/gapic-generator/Gemfile",
  all_bundled_files = "@bundler_gapic_generator//:bundler_installed_gems",
)

ruby_bundler_binary (
  name = "gapic_generator_ruby_bundler",
  entrypoint = "@gapic_generator_ruby//:gapic-generator/bin/protoc-gen-ruby_gapic",
  srcs = ["@gapic_generator_ruby//:gapic_generator_allfiles"],
  src_base = "@gapic_generator_ruby//:gapic-generator",
  ruby_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator:gapic_generator_ruby_context",
  bundled_context = "@gapic_generator_ruby//rules_ruby_gapic/gapic-generator:gapic_generator_bundled_context",
  visibility = ["//visibility:public"],
)
