# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A target defining the ruby runtime context that can be used by the rules requiring ruby binaries/ruby standard libraries
"""
load(":ruby_context.bzl", "ruby_context")

##
# A ruby runtime context that can be used by the rules requiring ruby binaries/ruby standard libraries
#
ruby_context(
  name = "ruby_context",
  visibility = ["//visibility:public"],
  ruby_bin = "@ruby_runtime//:bin/ruby",
  gem_bin = "@ruby_runtime//:bin/gem",
  bundle_bin = "@ruby_runtime//:bin/bundle",
  all_bins = "@ruby_runtime//:ruby_bins_allfiles",
  ruby_libfiles = "@ruby_runtime//:ruby_libs_allfiles",
  ruby_libroots = "@ruby_runtime//:ruby_libroots",
)
