load (":check_ruby_versions.bzl", "check_ruby_binver")
load (":check_ruby_nativelibs.bzl", "check_ruby_require")

check_ruby_binver (
  name = "ruby_gem_ver",
  dependency = "@ruby_runtime//:bin/gem",
)

check_ruby_binver (
  name = "ruby_ver",
  dependency = "@ruby_runtime//:bin/ruby",
)

check_ruby_require (
  name = "check_ruby_require",
  ruby_bin = "@ruby_runtime//:bin/ruby",
)
