# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A set of targets to verify that ruby_runtime builds successfully
"""
load (":check_ruby_versions.bzl", "check_ruby_binver")
load (":check_ruby_nativelibs.bzl", "check_ruby_require")

##
# A target to check that a `bin/ruby --version` command works
#
check_ruby_binver (
  name = "ruby_ver",
  dependency = "@ruby_runtime//:bin/ruby",
)

##
# A target to check that a `bin/gem --version` command works
#
check_ruby_binver (
  name = "ruby_gem_ver",
  dependency = "@ruby_runtime//:bin/gem",
)

##
# A target to check that a `bin/gem --version` command works
#
check_ruby_binver (
  name = "ruby_bundler_ver",
  dependency = "@ruby_runtime//:bin/bundler",
)

##
# A target to check that a complicated ruby command that 
# requires multiple standard libraries and then 
# executes a small ruby script inline works
#
check_ruby_require (
  name = "check_ruby_require",
  ruby_bin = "@ruby_runtime//:bin/ruby",
)
