# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Targets to verify that ruby_binary rule is working correctly
"""
load ("//rules_ruby_gapic:ruby_binary/ruby_binary.bzl", "ruby_binary")
load ("//rules_ruby_gapic:ruby_binary/ruby_bundler_binary.bzl", "ruby_bundler_binary")

##
# Running the hello world file with a dependency on a Ruby StandardLib as an executable shellscript
# the script is artificially a two-parter to verify that internal file loading via require
# will work as well
#
ruby_binary (
  name = "ruby_hellolib_sh",
  entrypoint = ":srcs/hello_ruby.rb",
  srcs = [":srcs/hello_ruby.rb", ":srcs/lib/hello_ruby_lib.rb"],
  src_base = ":srcs"
)

ruby_bundler_binary (
  name = "rainbow_test_bundler",
  entrypoint = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/lib/rainbow_main.rb",
  gemfile = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/Gemfile",
  gemfile_lock = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/Gemfile.lock",
  gemspec = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/none.gemspec",
  version_rb ="@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/none.version.rb",
  bundler_install_path = "@bundler_rainbow_test//:vendor",
  srcs = ["@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/lib/rainbow_main.rb", "@bundler_rainbow_test//:bundler_installed_gems",],
  src_base = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest",
  visibility = ["//visibility:public"],
)