# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Targets to verify that ruby_binary rule is working correctly
"""
load ("//rules_ruby_gapic/ruby_binary:ruby_binary.bzl", "ruby_binary")
load ("//rules_ruby_gapic/ruby_binary:ruby_bundler_binary.bzl", "ruby_bundler_binary")
load ("//rules_ruby_gapic/ruby:bundled_install_context.bzl", "bundled_install_context")

##
# Running the hello world file with a dependency on a Ruby StandardLib as an executable shellscript
# the script is artificially a two-parter to verify that internal file loading via require
# will work as well
#
ruby_binary (
  name = "multifile_rubylib_sh",
  entrypoint = ":multifile_rubylib_test/hello_ruby.rb",
  srcs = [":multifile_rubylib_test/hello_ruby.rb", ":multifile_rubylib_test/lib/hello_ruby_lib.rb"],
  src_base = ":multifile_rubylib_test"
)

bundled_install_context(
  name = "rainbow_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_rainbow_test//:export/Gemfile",
  all_bundled_files = "@bundler_rainbow_test//:bundler_installed_gems",
)

ruby_bundler_binary (
  name = "rainbow_bundler_sh",
  entrypoint = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/lib/rainbow_main.rb",
  srcs = ["@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest/lib/rainbow_main.rb"],
  src_base = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:rainbow_gemtest",
  ruby_context = "@gapic_generator_ruby//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":rainbow_bundled_context",
  visibility = ["//visibility:public"],
)

bundled_install_context(
  name = "rubocop_bundled_context",
  visibility = ["//visibility:public"],
  gemfile = "@bundler_rubocop_test//:export/Gemfile",
  all_bundled_files = "@bundler_rubocop_test//:bundler_installed_gems",
)

ruby_bundler_binary (
  name = "rubocop_bundler_sh",
  entrypoint = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:syscall_rubocop_test/lib/rubocop_main.rb",
  srcs = ["@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:syscall_rubocop_test/lib/rubocop_main.rb"],
  src_base = "@gapic_generator_ruby//rules_ruby_gapic/ruby_binary/check:syscall_rubocop_test",
  ruby_context = "@gapic_generator_ruby//rules_ruby_gapic/ruby:ruby_context",
  bundled_context = ":rubocop_bundled_context",
  visibility = ["//visibility:public"],
)
